Update portfolio modal text

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Mode"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> &emsp; I currently work as an Android Developer on the Consumer Identity team at Capital One. My team works to provide solutions to help verify customer identities and allow them to do banking in a way that is safe, secure, and easy. I have been working in Android development and Kotlin in the past year, and am finding real joy in working in the Mobile Development space.</p>
+                                    <p class="mb-5"> &emsp; I currently work as an Android Developer on the Consumer Identity team at Capital One. My team works to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy. I have been working in Android development and Kotlin in the past year, and am finding real joy in working in the Mobile Development space.</p>
                                     <p class="mb-5">In college, I’ve gained experience working on projects in Java, C++, and Python. </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
@@ -138,7 +138,7 @@
                                     <ul>
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learing Attitude: </span> I expect to learn and improve everyday as a developing engineer.</li>
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> I make an effort and go out of my way to ensure that my communication with my teammates is clear. </li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> I aim to actively improve workplace culture and create an enviroment where people feel accepted and welcome. </li> 
+                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> I aim to actively improve office culture and do my part in creating an enviroment where people feel accepted and welcome. </li> 
                                     </ul>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
