--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="m-3">What people can expect from me at the workplace:</p>
                                     <ul>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learing Attitude: </span> I expect to learn and improve everyday as a developing engineer.</li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> I expect to learn and improve everyday as a developing engineer.</li>
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> I make an effort and go out of my way to ensure that my communication with my teammates is clear. </li>
                                         <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> I aim to actively improve office culture and do my part in creating an enviroment where people feel accepted and welcome. </li> 
                                     </ul>
