Text and link updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Washington DC  | Software Engineer at Capital One | UC Irvine
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Washington DC Metro Area  | Software Engineer at Capital One | UC Irvine
 </p>
             </div>
         </header>
@@ -106,8 +106,7 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Mode"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> &emsp; I currently work as an Android Developer on the Consumer Identity team at Capital One. My team works to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy. I have been working in Android development and Kotlin in the past year, and am finding real joy in working in the Mobile Development space.</p>
-                                    <p class="mb-5">In college, I’ve gained experience working on projects in Java, C++, and Python. </p>
+                                    <p class="mb-5"> &emsp; Darryl currently works as an Mobile Developer on the Consumer Identity team at Capital One. His team works to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy. Darryl have been  primarily working in Android development and Kotlin in the past year, and enjoys in working in the Mobile Development space.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
@@ -134,11 +133,11 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300" class="img-fluid rounded mb-5" src="assets/img/portfolio/favorite_border-24px.svg" alt="Open Heart"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="m-3">What people can expect from me at the workplace:</p>
+                                    <p class="m-3">What people can expect from Darryl at the workplace:</p>
                                     <ul>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> I expect to learn and improve everyday as a developing engineer.</li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> I make an effort and go out of my way to ensure that my communication with my teammates is clear. </li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> I aim to actively improve office culture and do my part in creating an enviroment where people feel accepted and welcome. </li> 
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> He expects to learn and improve everyday as a developing engineer.</li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes an consistent effort and go out of my way to ensure that his communication with his teammates is clear. </li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He aims to actively improve office culture and do his part in creating an enviroment where people feel accepted and welcome. </li> 
                                     </ul>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
@@ -164,9 +163,11 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/edit-24px.svg" alt="Circus Tent"/>
+                                    <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/edit-24px.svg" alt="Pencil"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">(Hopefully) Coming soon! </p>
+                                    <p class="mb-5"><ul>
+                                        <li><a href="https://medium.com/capital-one-tech/the-most-helpful-resources-from-my-first-year-in-android-capital-one-44ba2f9e31a2">The Most Helpful Resources From My First Year in Android</a></li>
+                                    </ul> </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
@@ -192,14 +193,14 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> I'm a proud Bay Area native who recently moved to the Washington DC area after attending college at UC Irvine. I currently work at Capital One as part of the Technology Development Program (TDP).</p>
+                        <p class="pre-wrap lead"> Darryl is a Bay Area native who recently moved to the Washington DC area after attending college at UC Irvine. He currently works at Capital One as part of the Technology Development Program (TDP).</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> Some of my hobbies include listening to tons of podcasts and music, and being a huge Golden State Warriors fan. I also collect sneakers and streetwear, and have been trying to read more in my spare time.
+                        <p class="pre-wrap lead"> Some of his hobbies include listening to tons of podcasts and music, and being a huge Golden State Warriors fan. He also collect sneakers, and have been trying to read more in his spare time.
                         </p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">Feel free to connect with me! The best way to reach me is through LinkedIn or through email at darrylmak2@gmail.com.</p>
+                        <p class="pre-wrap lead"> The best way to connect with Darryl is through LinkedIn or through email at darrylmak2@gmail.com.</p>
                     </div>
                 </div>
             </div>
@@ -233,15 +234,17 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">LOCATION</h4>
-                        <p class="pre-wrap lead mb-0">Washington DC - Baltimore </p>
+                        <p class="pre-wrap lead mb-0">Washington DC Metro Area </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">AROUND THE WEB</h4>
                             <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/darrylmak/">
                                 <i class="fab fa-fw fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/darrylmak/">
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/dkmak">
                                 <i class="fab fa-fw fa-github"></i></a>
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://darrylmak.medium.com/">
+                                <i class="fab fa-fw fa-medium"></i></a>
                     </div>
 
                     
