--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Washington DC Metro Area  | Software Engineer at Capital One | UC Irvine
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Washington DC Metro Area  | Software Engineer at GOAT Group | UC Irvine
 </p>
             </div>
         </header>
@@ -106,7 +106,9 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Mode"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> &emsp; Darryl currently works as an Mobile Developer on the Consumer Identity team at Capital One. His team works to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy. Darryl have been  primarily working in Android development and Kotlin in the past year, and enjoys in working in the Mobile Development space.</p>
+                                    <p class="mb-5"> &emsp; Darryl builds mobile experiences for Alias, the seller app for GOAT and Flight Club. Users can sell their sneakers and clothing items with help from seller analytics, such as data-driven pricing recommendations, buying trends, sales histories, and more.</p>
+                                    <p class="mb-5"> &emsp;Previously,  Darryl worked as an Mobile Developer on the Consumer Identity team at Capital One. His team worked to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy.</p>
+                                    <p class="mb-5"> &emsp;Darryl has been primarily working in Android development and Kotlin in the few years, and enjoys working in the Mobile Development space.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
@@ -193,37 +195,13 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> Darryl is a Bay Area native who recently moved to the Washington DC area after attending college at UC Irvine. He currently works at Capital One as part of the Technology Development Program (TDP).</p>
+                        <p class="pre-wrap lead"> Darryl is a software engineer based in the Washington DC Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> Some of his hobbies include listening to tons of podcasts and music, and being a huge Golden State Warriors fan. He also collect sneakers, and have been trying to read more in his spare time.
-                        </p>
+                        <p class="pre-wrap lead"> He currently works as a Mobile Software Engineer for GOAT Group. He loves listening to podcasts and is interested in fashion, sneakers, and sports.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead"> The best way to connect with Darryl is through LinkedIn or through email at darrylmak2@gmail.com.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="page-section" id="contact">
-            <div class="container">
-                <!-- Contact Section Heading-->
-                <div class="text-center">
-                    <h2 class="page-section-heading text-secondary d-inline-block mb-0">CONTACT</h2>
-                </div>
-                <!-- Icon Divider-->
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Content-->
-                <div class="row justify-content-center">
-                    <div class="col-lg-4">
-                        <div class="d-flex flex-column align-items-center">
-                            <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
-                            <div class="text-muted">Email</div><a class="lead font-weight-bold" href="mailto:name@example.com">darrylmak2@gmail.com</a>
-                        </div>
+                        <p class="pre-wrap lead"> The best way to connect with Darryl is through LinkedIn.</p>
                     </div>
                 </div>
             </div>
