--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img width="900" height="600" class="img-fluid" src="assets/img/portfolio/developer_mode-24px.svg" alt="Log Cabin"/>
+                            </div><img width="900" height="600" class="img-fluid" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Icon"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/favorite_border-24px.svg" alt="Tasty Cake"/>
+                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/favorite_border-24px.svg" alt="Heart Icon"/>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/edit-24px.svg" alt="Circus Tent"/>
+                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/edit-24px.svg" alt="Pen Icon"/>
                         </div>
                     </div>
                 
@@ -109,7 +109,7 @@
                                     <p class="mb-5"> &emsp; Darryl builds mobile experiences for Alias, the seller app for GOAT and Flight Club. Users can sell their sneakers and clothing items with help from seller analytics, such as data-driven pricing recommendations, buying trends, sales histories, and more.</p>
                                     <p class="mb-5"> &emsp;Previously,  Darryl worked as an Mobile Developer on the Consumer Identity team at Capital One. His team worked to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy.</p>
                                     <p class="mb-5"> &emsp;Darryl has been primarily working in Android development and Kotlin in the few years, and enjoys working in the Mobile Development space.</p>
-                                    <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                    <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes an consistent effort and go out of my way to ensure that his communication with his teammates is clear. </li>
                                         <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He aims to actively improve office culture and do his part in creating an enviroment where people feel accepted and welcome. </li> 
                                     </ul>
-                                    <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                    <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                                     <p class="mb-5"><ul>
                                         <li><a href="https://medium.com/capital-one-tech/the-most-helpful-resources-from-my-first-year-in-android-capital-one-44ba2f9e31a2">The Most Helpful Resources From My First Year in Android</a></li>
                                     </ul> </p>
-                                    <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                    <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
                         </div>
