--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/Avatar-Maker (1).svg" alt="">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/favicon.svg" alt="My Avatar">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Darryl Mak</h1>
                 <!-- Icon Divider-->
@@ -107,7 +107,7 @@
                                     <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Mode"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"> &emsp; Darryl builds mobile experiences for Alias, the seller app for GOAT and Flight Club. Users can sell their sneakers and clothing items with help from seller analytics, such as data-driven pricing recommendations, buying trends, sales histories, and more.</p>
-                                    <p class="mb-5"> &emsp;Previously,  Darryl worked as an Mobile Developer on the Consumer Identity team at Capital One. His team worked to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy.</p>
+                                    <p class="mb-5"> &emsp;Previously,  Darryl worked as a Mobile Developer on the Consumer Identity team at Capital One. His team worked to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy.</p>
                                     <p class="mb-5"> &emsp;Darryl has been primarily working in Android development and Kotlin in the few years, and enjoys working in the Mobile Development space.</p>
                                     <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
@@ -137,9 +137,10 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="m-3">What people can expect from Darryl at the workplace:</p>
                                     <ul>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> He expects to learn and improve everyday as a developing engineer.</li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes an consistent effort and go out of my way to ensure that his communication with his teammates is clear. </li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He aims to actively improve office culture and do his part in creating an enviroment where people feel accepted and welcome. </li> 
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> He aims to learn and improve everyday as a growing engineer.</li>
+                                            .</li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes a consistent effort and goes out of the way to ensure that his communication with his team is clear. </li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He is proactive about listening and learning more about his role in making his workplace a more welcoming and safe space for him and his colleagues. </li> 
                                     </ul>
                                     <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
@@ -195,13 +196,13 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> Darryl is a software engineer based in the Washington DC Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
+                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the Washington DC Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead"> He currently works as a Mobile Software Engineer for GOAT Group. He loves listening to podcasts and is interested in fashion, sneakers, and sports.</p>
+                        <p class="pre-wrap lead">He currently works as a Mobile Software Engineer for GOAT Group. He loves listening to podcasts and is interested in fashion, sneakers, and sports.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead"> The best way to connect with Darryl is through LinkedIn.</p>
+                        <p class="pre-wrap lead">The best way to connect with Darryl is through LinkedIn.</p>
                     </div>
                 </div>
             </div>
