--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Washington DC Metro Area  | Software Engineer at GOAT Group | UC Irvine
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Software Engineer at GOAT Group | UC Irvine
 </p>
             </div>
         </header>
@@ -196,7 +196,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the Washington DC Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
+                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the New York Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
                         <p class="pre-wrap lead">He currently works as a Mobile Software Engineer for GOAT Group. He loves listening to podcasts and is interested in fashion, sneakers, and sports.</p>
@@ -213,7 +213,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">LOCATION</h4>
-                        <p class="pre-wrap lead mb-0">Washington DC Metro Area </p>
+                        <p class="pre-wrap lead mb-0">New York Metropolitan Area </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
