small text updates, update colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Darryl Mak - Software Engineer</title>
+        <title>Darryl Mak - Mobile Software Engineer</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -13,7 +13,7 @@
         <!-- Fonts CSS-->
         <link rel="stylesheet" href="css/heading.css">
         <link rel="stylesheet" href="css/body.css">
-        <link rel="icon" type="image/png" href="assets/img/favicon.svg"/>
+        <link rel="icon" type="image/png" href="assets/img/my-icon.svg"/>
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
@@ -33,7 +33,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/favicon.svg" alt="My Avatar">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/my-icon.svg" alt="My Avatar">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Darryl Mak</h1>
                 <!-- Icon Divider-->
@@ -43,7 +43,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Software Engineer at GOAT Group | UC Irvine
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Mobile Software Engineer at GOAT Group | UC Irvine
 </p>
             </div>
         </header>
@@ -63,7 +63,7 @@
                 <div class="row justify-content-center">
                     <!-- Portfolio Items-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
+                        <div class="portfolio-item mx-auto portfolio-item" data-toggle="modal" data-target="#portfolioModal0">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div><img width="900" height="600" class="img-fluid" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Icon"/>
@@ -138,7 +138,6 @@
                                     <p class="m-3">What people can expect from Darryl at the workplace:</p>
                                     <ul>
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> He aims to learn and improve everyday as a growing engineer.</li>
-                                            .</li>
                                         <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes a consistent effort and goes out of the way to ensure that his communication with his team is clear. </li>
                                         <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He is proactive about listening and learning more about his role in making his workplace a more welcoming and safe space for him and his colleagues. </li> 
                                     </ul>
@@ -196,10 +195,10 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the New York Metro Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
+                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the New York Metropolitan Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">He currently works as a Mobile Software Engineer for GOAT Group. He loves listening to podcasts and is interested in fashion, sneakers, and sports.</p>
+                        <p class="pre-wrap lead">He currently works as a Mobile Software Engineer for GOAT Group. He enjoys listening to podcasts and is interested in fashion, sneakers, and sports.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
                         <p class="pre-wrap lead">The best way to connect with Darryl is through LinkedIn.</p>
@@ -236,7 +235,7 @@
             </div>
         </footer>
         <!-- Copyright Section-->
-        <section class="copyright py-4 text-center text-white">
+        <section class="copyright py-4 text-center text-white bg-primary">
             <div class="container"><small class="pre-wrap">Darryl Mak © 2020</small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
